[Modfied] OC-201 #comment update favicon #time 15m

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -20,7 +20,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Open Source API-HUB. Connecting data center applications to automate your processes.">
     <title>OpenCelium</title>
-    <link rel="shortcut icon" type="image/png" href="img/logo.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
     <link
             rel="stylesheet"
@@ -34,9 +33,9 @@
     <div id="notification"></div>
     <script>
         var shortcutIcon = document.createElement("link");
-        shortcutIcon.rel = "shortcut icon";
+        shortcutIcon.rel = "icon";
         shortcutIcon.type = 'image/png';
-        shortcutIcon.href = './img/logo.png';
+        shortcutIcon.href = './img/fav_icon.png';
         document.getElementsByTagName("head")[0].appendChild(shortcutIcon);
     </script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
