[Improved] OC-160 #comment Invoker Generator Tabs are visible if method was chosen; refactoring #time 8h

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -20,6 +20,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Open Source API-HUB. Connecting data center applications to automate your processes.">
     <title>OpenCelium</title>
+    <link rel="icon" href="fav_icon.png" type="image/png">
+    <link rel="shortcut icon" href="fav_icon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
     <link
             rel="stylesheet"
@@ -31,13 +33,6 @@
   <body>
 	<div id="app"></div>
     <div id="notification"></div>
-    <script>
-        var shortcutIcon = document.createElement("link");
-        shortcutIcon.rel = "icon";
-        shortcutIcon.type = 'image/png';
-        shortcutIcon.href = './img/fav_icon.png';
-        document.getElementsByTagName("head")[0].appendChild(shortcutIcon);
-    </script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script>
       var hrefs = [
