--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -35,6 +35,7 @@
   <body>
 	<div id="app"></div>
     <div id="notification"></div>
+    <div id="oc_modal"></div>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script>
       var hrefs = [
