--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -43,7 +43,8 @@
           "./styles/app.css",
           "node_modules/storm-react-diagrams/dist/style.min.css",
           "./styles/react-select.css",
-          "./styles/material_icons.css"
+          "./styles/material_icons.css",
+          "./oc_modules/template_converter/src/styles/awesome/css/all.min.css"
       ];
       var srcs = [
           'bundle.js',
