[Improved] OC-160 #comment refactored some general components #time 2h

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -22,22 +22,17 @@
     <title>OpenCelium</title>
     <link rel="icon" href="fav_icon.png" type="image/png">
     <link rel="shortcut icon" href="fav_icon.png" type="image/png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
-    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-    <link
-            rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-            crossorigin="anonymous"
-    />
+    <link rel="stylesheet" type="text/css" href="./styles/swiper.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./styles/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./styles/slick-theme.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css"/>
+    <script src="./scripts/jquery-latest.js" type="text/javascript"></script>
   </head>
   <body>
 	<div id="app"></div>
     <div id="notification"></div>
     <div id="oc_xml_modal"></div>
     <div id="oc_generator_modal"></div>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script>
       var hrefs = [
           "./styles/app.css",
