--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -22,11 +22,6 @@
     <title>OpenCelium</title>
     <link rel="icon" href="fav_icon.png" type="image/png">
     <link rel="shortcut icon" href="fav_icon.png" type="image/png">
-    <link rel="stylesheet" type="text/css" href="./styles/swiper.min.css"/>
-    <link rel="stylesheet" type="text/css" href="./styles/slick.min.css"/>
-    <link rel="stylesheet" type="text/css" href="./styles/slick-theme.min.css"/>
-    <link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css"/>
-    <script src="./scripts/jquery-latest.js" type="text/javascript"></script>
   </head>
   <body>
 	<div id="app"></div>
@@ -35,28 +30,33 @@
     <div id="oc_generator_modal"></div>
     <script>
       var hrefs = [
+          "./styles/swiper.min.css",
+          "./styles/slick.min.css",
+          "./styles/slick-theme.min.css",
           "./styles/app.css",
+          "./styles/bootstrap.min.css",
           "node_modules/storm-react-diagrams/dist/style.min.css",
           "./styles/react-select.css",
           "./styles/material_icons.css",
           "./oc_modules/template_converter/src/styles/awesome/css/all.min.css"
       ];
       var srcs = [
+          './scripts/jquery-latest.js',
           'bundle.js',
           'jira_integration.js'
       ];
       var host = '/';
+      for(var i = 0; i < hrefs.length; i++) {
+        var link = document.createElement("link");
+        link.rel = "stylesheet";
+        link.href = host + hrefs[i];
+        document.getElementsByTagName("head")[0].appendChild(link);
+      }
       for(var i = 0; i < srcs.length; i++) {
           var script = document.createElement('script');
           script.type='text/javascript';
           script.src = host + srcs[i];
           document.getElementsByTagName("head")[0].appendChild(script);
-      }
-      for(var i = 0; i < hrefs.length; i++) {
-          var link = document.createElement("link");
-          link.rel = "stylesheet";
-          link.href = host + hrefs[i];
-          document.getElementsByTagName("head")[0].appendChild(link);
       }
 
       var socketLink = document.createElement("link");
