[Modified] OC-301 #comment changed dev server to prod server and switched off browser-sync #time 3h

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -48,7 +48,7 @@
       var srcs = [
           './scripts/jquery-latest.js',
           'bundle.js',
-          'jira_integration.js'
+          './scripts/jira_integration.js'
       ];
       var host = '/';
       for(var i = 0; i < hrefs.length; i++) {
