--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -43,6 +43,7 @@
           "node_modules/storm-react-diagrams/dist/style.min.css",
           "./styles/react-select.css",
           "./styles/material_icons.css",
+          "./styles/ReactCrop.css",
           "./oc_modules/template_converter/src/styles/awesome/css/all.min.css"
       ];
       var srcs = [
