[Modified] OC-315 #comment implmented grid layout for dashboard widgets #time 8h

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -44,6 +44,8 @@
           "./styles/react-select.css",
           "./styles/material_icons.css",
           "./styles/ReactCrop.css",
+          "./styles/react-grid-layout.css",
+          "./styles/react-resizable.css",
           "./oc_modules/template_converter/src/styles/awesome/css/all.min.css"
       ];
       var srcs = [
