[Modified] OC-322 #comment modified icons and overview #time 5h

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -22,6 +22,7 @@
     <title>OpenCelium</title>
     <link rel="icon" href="fav_icon.png" type="image/png">
     <link rel="shortcut icon" href="fav_icon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700" rel="stylesheet" type="text/css">
   </head>
   <body>
 	<div id="app"></div>
