--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -22,6 +22,7 @@
     <title>OpenCelium</title>
     <link rel="icon" href="fav_icon.png" type="image/png">
     <link rel="shortcut icon" href="fav_icon.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -36,20 +37,18 @@
           "./styles/slick-theme.min.css",
           "./styles/app.css",
           "./styles/bootstrap.min.css",
-          "node_modules/storm-react-diagrams/dist/style.min.css",
           "./styles/react-select.css",
           "./styles/material_icons.css",
           "./styles/ReactCrop.css",
           "./styles/react-grid-layout.css",
           "./styles/react-resizable.css",
-          "./oc_modules/template_converter/src/styles/awesome/css/all.min.css"
       ];
       var srcs = [
           './scripts/jquery-latest.js',
           'bundle.js',
           './scripts/jira_integration.js'
       ];
-      var host = '/';
+      var host = '<%= host %>';
       for(var i = 0; i < hrefs.length; i++) {
         var link = document.createElement("link");
         link.rel = "stylesheet";
