--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -22,6 +22,7 @@
     <title>OpenCelium</title>
     <link rel="icon" href="fav_icon.png" type="image/png">
     <link rel="shortcut icon" href="fav_icon.png" type="image/png">
+    <link href="https://unpkg.com/graphiql/graphiql.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700" rel="stylesheet" type="text/css">
   </head>
