[Fixed] OC-430 #comment fixed select search #time 2h

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -31,6 +31,7 @@
     <div id="notification"></div>
     <div id="oc_xml_modal"></div>
     <div id="oc_generator_modal"></div>
+    <div id="oc_callout"></div>
     <script>
       var hrefs = [
           "./styles/swiper.min.css",
