[Modified] OC-456 #comment cross domain theme #time 1h

--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -35,5 +35,6 @@
     <div id="oc_generator_modal"></div>
     <div id="oc_callout"></div>
     <div id="schedule_notification_list"></div>
+    <iframe id="iframe_messenger" style="display: none"></iframe>
 </body>
 </html>
